# tokenjam

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  integration_request.md
.github/scripts/: archive_traffic.py
.github/workflows/: ci.yml  docker-publish.yml  publish-npm.yml  traffic-archive.yml
.tj/: config.toml
docs/: agent-capability-matrix.md  alerts.md  architecture.md  ci-setup.md  claude-code-integration.md  cli-reference.md  configuration.md  export.md  first-hour.md  framework-support.md  getting-started.md  harness-integration.md  installation.md  nemoclaw-integration.md  openclaw.md  python-sdk.md  typescript-sdk.md
docs/backfill/: codex.md  helicone.md  langfuse.md  otlp.md  overview.md
docs/brand/: README.md
docs/internal/: close-the-loop.md  lens-vendor-versions.md  release-smoke-checklist.md  wizard-contract.md
docs/optimize/: cache.md  downsize.md  reuse.md  script.md  subagent.md  trim.md  verbosity.md
docs/policy/: overview.md
docs/proxy/: overview.md
examples/: README.md
examples/alerts_and_drift/: _shared.py  budget_breach_demo.py  drift_demo.py  record_outcome_demo.py  sensitive_actions_demo.py
examples/multi/: rag_pipeline.py  research_team.py  router_agent.py
examples/openclaw/: README.md
examples/single_framework/: autogen_agent.py  crewai_agent.py  langchain_agent.py  langgraph_agent.py  llamaindex_agent.py
examples/single_provider/: anthropic_agent.py  bedrock_agent.py  gemini_agent.py  litellm_agent.py  openai_agent.py  openai_agents_sdk_agent.py
growth/: README.md
incidents/hallucination-drift/: BLOG.md  README.md  scenario.py
incidents/retry-loop/: BLOG.md  README.md  scenario.py
incidents/surprise-cost/: BLOG.md  README.md  scenario.py
npm-wrapper/: README.md  package.json
pricing/: models.toml
scripts/: release.sh
sdk-ts/: README.md  package-lock.json  package.json
sdk-ts/examples/: record-outcome.ts
sdk-ts/src/: client.test.ts  client.ts  index.ts  record-outcome.test.ts  semconv.test.ts  semconv.ts  types.ts
tests/: agent-post-release-runner.md  agent-post-release-v0.4.0.md  agent-pre-release-runner.md  agent-pre-release-v0.4.0.md  agent-pre-release-v0.4.1.md  conftest.py  factories.py  manual-new-release-tests.md  manual-pre-release-runner.md  manual-pre-release-testing.md  manual-pre-release-v0.4.0.md  token_aggregate_guard.py
tests/agents/: email_agent_budget_breach.py  email_agent_drift.py  email_agent_loop.py  email_agent_normal.py  test_mock_scenarios.py  test_record_outcome.py
tests/e2e/: conftest.py  test_real_llm.py
tests/fixtures/: helicone_real_response.json  langfuse_real_response.json  otlp_sample.json
tests/integration/: test_analytics.py  test_api.py  test_cli.py  test_cli_api_framing_parity.py  test_cli_uninstall.py  test_cmd_proxy.py  test_cmd_route.py  test_context_serve.py  test_cost_charts.py  test_cost_compare_serve.py  test_cost_framing_window.py  test_cost_proposals_api.py  test_data_access_parity.py  test_db.py  test_demo_live.py  test_demos.py  test_first_run_roundtrip_239.py  test_full_pipeline.py  test_global_json_flag.py  test_litellm_enrichment.py  test_logs_api.py  test_onboard_noninteractive.py  test_policy_api.py  test_pothole_api.py  test_proxy_app.py  test_proxy_policy.py  test_quota_audit_serve.py  test_relearn_api.py  test_sdk_config_discovery.py  test_storage_backend_parity.py  test_summarize_api.py  test_summarize_cli.py  test_summarize_run_api.py  test_tokenmaxx_serve.py
tests/results/: agent-post-release-v0.4.0-20260619T221412Z.md  agent-pre-release-v0.4.0-20260619T202233Z.md  agent-pre-release-v0.4.0-20260619T205108Z.md  agent-pre-release-v0.4.1-20260620T002546Z.md  manual-pre-release-v0.4.0-20260619T202233Z.md  manual-pre-release-v0.4.0-20260619T205108Z.md
tests/synthetic/: test_alert_rules.py  test_async_hooks_concurrency.py  test_cost_tracking.py  test_drift_detection.py  test_ingest.py  test_request_capture.py  test_schema_validation.py
tests/toy_agent/: toy_agent.py
tests/unit/: test_alerts.py  test_api_backend_timeout.py  test_async_hooks.py  test_attribution_cache.py  test_backfill.py  test_backfill_codex.py  test_backfill_progress.py  test_batch_placement.py  test_budget_cap_policy.py  test_bulk_insert_spans.py  test_cache_efficacy.py  test_cache_recommend.py  test_cache_root_cause.py  test_cache_root_cause_proposals.py  test_cache_root_cause_render.py  test_cli_entrypoint.py  test_cmd_cost.py  test_cmd_hook.py  test_cmd_policy.py  test_cmd_pricing.py  test_cmd_relearn.py  test_cmd_resume_brief.py  test_cmd_serve_port_precheck.py  test_cmd_session_story.py  test_cmd_status_teaser.py  test_cmd_stop.py  test_cmd_stop_scoping.py  test_cmd_tokenmaxx.py  test_compare.py  test_config.py  test_config_secret_divergence.py  test_context_diagnostic.py  test_context_resend.py  test_cost.py  test_cost_accounting_guards.py  test_cost_api_recoverable_presentation.py  test_cost_compare_framing.py  test_cost_proposal_verbs.py  test_cost_proposals.py  test_cost_proposals_model.py  (+142 more)
tj/api/: app.py
tj/cli/: cmd_alerts.py  cmd_budget.py  cmd_cost.py  cmd_demo.py  cmd_doctor.py  cmd_drift.py  cmd_export.py  cmd_mcp.py  cmd_onboard.py  cmd_serve.py  cmd_status.py  cmd_stop.py  cmd_tools.py  cmd_traces.py  cmd_uninstall.py  main.py
tj/core/: alerts.py  api_backend.py  config.py  cost.py  db.py  drift.py  ingest.py  models.py  retention.py  schema_validator.py
tj/demo/: env.py
tj/mcp/: server.py
tj/otel/: exporters.py  provider.py  semconv.py
tj/sdk/: __init__.py  agent.py  bootstrap.py  http_exporter.py  transport.py
tj/ui/: index.html
tj/utils/: formatting.py
tokenjam/: __init__.py
tokenjam/api/: app.py  deps.py  middleware.py
tokenjam/cli/: backfill_progress.py  banner.py  cmd_alerts.py  cmd_backfill.py  cmd_budget.py  cmd_context.py  cmd_cost.py  cmd_demo.py  cmd_doctor.py  cmd_drift.py  cmd_export.py  cmd_hook.py  (+37 more)
traffic/: 2026-W25.json
(+217 files in other folders)
