[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenjam"
version = "0.4.0"
description = "TokenJam — local-first OTel-native observability for Autonomous AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anil Murty", email = "anil@metabldr.com" }]
keywords = ["ai", "agents", "observability", "opentelemetry", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "duckdb>=0.10",
    "pytz>=2024.1",
    "jsonschema>=4.0",
    "genson>=1.2",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "websockets>=12.0",
    # fastmcp ships in the base install (was in the [mcp] extra) so `tj mcp`
    # works on a fresh `pipx install tokenjam` without requiring users to
    # remember the extra. Claude Code's MCP integration is now a primary
    # use case rather than an opt-in. Issue #101.
    "fastmcp>=0.2",
]

[project.urls]
Homepage = "https://opencla.watch"
Repository = "https://github.com/Metabuilder-Labs/openclawwatch"
Issues = "https://github.com/Metabuilder-Labs/openclawwatch/issues"

[project.optional-dependencies]
langchain = ["langchain>=0.2"]
crewai    = ["crewai>=0.28"]
autogen   = ["pyautogen>=0.2"]
litellm   = ["litellm>=1.40"]
dev       = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]
# Kept as a no-op extra for back-compat — `pipx install 'tokenjam[mcp]'` still
# works, just installs the same fastmcp that's now in the base dependencies.
# Documented in `docs/installation.md` so users know they no longer need it.
mcp       = []
# Trim analyzer (`tj optimize --finding prompt-bloat`). LLMLingua-2 pulls in
# PyTorch and transformers, ~2GB total. Kept optional so the base install
# stays small — most users don't run the bloat analyzer.
bloat     = ["llmlingua>=0.2"]

[project.scripts]
tj = "tokenjam.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/synthetic", "tests/agents", "tests/integration"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["tokenjam"]
artifacts = ["incidents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "misc", "method-assign", "call-overload", "arg-type", "assignment", "no-any-return"]
