[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenjam"
version = "0.6.0"
description = "TokenJam: a local-first, OTel-native cost-saving utility for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anil Murty", email = "anil@metabldr.com" }]
keywords = ["ai", "agents", "cost-optimization", "claude-code", "observability", "opentelemetry", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # >=8.2: CliRunner separately captures stdout/stderr by default from this
    # version on (result.stdout / result.stderr always populated); tests that
    # assert stdout stays clean of stderr-routed output rely on this.
    "click>=8.2",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "duckdb>=0.10",
    "pytz>=2024.1",
    "jsonschema>=4.0",
    "genson>=1.2",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-exporter-prometheus>=0.46b0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "websockets>=12.0",
    # fastmcp ships in the base install (was in the [mcp] extra) so `tj mcp`
    # works on a fresh `pipx install tokenjam` without requiring users to
    # remember the extra. Claude Code's MCP integration is now a primary
    # use case rather than an opt-in. Issue #101.
    "fastmcp>=0.2",
]

[project.urls]
Homepage = "https://tokenjam.dev"
Repository = "https://github.com/Metabuilder-Labs/tokenjam"
Issues = "https://github.com/Metabuilder-Labs/tokenjam/issues"

[project.optional-dependencies]
langchain = ["langchain>=0.2"]
crewai    = ["crewai>=0.28"]
autogen   = ["pyautogen>=0.2"]
litellm   = ["litellm>=1.40"]
# ruff<0.16: 0.16.0 expanded ruff's own DEFAULT lint rule set (this project
# has no [tool.ruff.lint] select/ignore block, so it always runs whatever
# ruff's defaults are for the installed version) — an unpinned `ruff` here
# meant CI's `pip install -e ".[dev,mcp]"` silently picked up 0.16.0 the
# moment it hit PyPI and started flagging ~470 pre-existing patterns across
# the whole codebase that 0.15.x never checked, breaking every PR's Lint
# step for a reason with zero relation to that PR's own diff. Pinned to the
# 0.15.x line, which CI ran clean against as of the last verified-green run
# on main. Bump this deliberately (and fix or explicitly re-suppress
# whatever the new default set newly flags) rather than letting a ruff
# release silently redefine what "lint-clean" means for every PR.
# mypy>=2.3,<2.4: same rationale as the ruff pin above — an unpinned `mypy`
# here means CI's `pip install -e ".[dev,mcp]"` picks up whatever release is
# newest at job run time, and a new mypy version can start flagging
# pre-existing code the same way ruff 0.16.0 did. Pinned to the 2.3.x line,
# which `mypy tokenjam/` runs clean against as of this pin (2.3.0 verified
# clean, 217 source files, zero errors). Bump this deliberately (and fix or
# explicitly re-suppress whatever a new release newly flags) rather than
# letting a mypy release silently redefine what "type-clean" means for every PR.
dev       = ["pytest", "pytest-asyncio", "httpx", "ruff>=0.15.12,<0.16", "mypy>=2.3,<2.4"]
# Kept as a no-op extra for back-compat — `pipx install 'tokenjam[mcp]'` still
# works, just installs the same fastmcp that's now in the base dependencies.
# Documented in `docs/installation.md` so users know they no longer need it.
mcp       = []
# Trim analyzer (`tj optimize --finding prompt-bloat`). LLMLingua-2 pulls in
# PyTorch and transformers, ~2GB total. Kept optional so the base install
# stays small — most users don't run the bloat analyzer.
bloat     = ["llmlingua>=0.2"]

[project.scripts]
tj = "tokenjam.cli.entrypoint:main"
tokenjam = "tokenjam.cli.entrypoint:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/synthetic", "tests/agents", "tests/integration"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["tokenjam"]

# Ship the Agent Incident Library (`tj demo`) scenarios INSIDE the package so
# they reach pip/pipx installs (#291). The source stays at repo-root `incidents/`
# (the documented layout), but the wheel gets them at `tokenjam/incidents/<slug>/`
# — `incidents/` is outside the `tokenjam/` package, so it is never wheeled on
# its own. cmd_demo._discover_scenarios() resolves this packaged path first, with
# a repo-root fallback for the dev tree.
#
# `entrypoint.py` is force-included too (even though it already lives inside
# `tokenjam/`) so it is physically copied into site-packages rather than only
# resolved through an editable install's `.pth` redirect. That is what lets it
# still run — and print a repair hint — after the editable source checkout
# has been deleted; see the module docstring for the full story.
[tool.hatch.build.targets.wheel.force-include]
"incidents" = "tokenjam/incidents"
"tokenjam/cli/entrypoint.py" = "tokenjam/cli/entrypoint.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
# Only these two error codes stay globally disabled, deliberately, each with a
# tracked burn-down. Everything else (misc, arg-type, assignment, call-overload,
# method-assign) is ON — those catch real bugs (e.g. unpacking a `tuple | None`
# without narrowing surfaces as `misc`; passing the wrong argument type as
# `arg-type`), and were silently suppressing them repo-wide until this list was
# trimmed. When re-enabling a code here, prefer real fixes; use a targeted
# per-line `# type: ignore[code]  # reason` or a per-module `[[tool.mypy.overrides]]`
# only where an untyped third-party dep forces it.
#   - "attr-defined": ~50 violations, mostly attribute access on untyped
#     third-party / dynamically-shaped objects. Burn down per-module, then drop.
#   - "no-any-return": ~30 violations from returning `Any` out of typed helpers
#     that wrap untyped deps. Annotate/cast the boundaries, then drop.
disable_error_code = ["attr-defined", "no-any-return"]
